Add goal 'format' to format code using clang-format

--- a/lab09/lab05/Makefile
+++ b/lab09/lab05/Makefile
@@ -9,6 +9,8 @@ clean:
 	rm -rf dist
 prep:
 	mkdir dist
+format:
+	clang-format -i src/* test/test.c
 compile: main.bin test.bin
 
 main.bin: src/main.c
