--- a/lab09/lab05/Makefile
+++ b/lab09/lab05/Makefile
@@ -3,7 +3,7 @@ LAB_OPTS = -I./src src/lib.c
 C_OPTS = -std=gnu11 -g -Wall -Wextra -Werror -Wformat-security -Wfloat-equal -Wshadow -Wconversion -Wlogical-not-parentheses -Wnull-dereference -Wno-unused-variable -Werror=vla $(LAB_OPTS)
 V_FLAGS=--tool=memcheck --leak-check=full --show-reachable=yes --undef-value-errors=yes --track-origins=no --child-silent-after-fork=no --trace-children=no --error-exitcode=1
 
-all: clean prep compile check
+all: clean prep format compile check
 
 clean:
 	rm -rf dist
